--- a/style.css
+++ b/style.css
@@ -131,12 +131,12 @@ body {
   }
   
     .countdown {
-    margin: 25px;
+    margin: -15px 25px;
     width: 100%;
   }
   
   .countdown div {
-    margin: -30px 10px;
+    margin: 0 10px;
     font-size: 1em;
     font-weight: 400;
     margin-top: -25px;
