--- a/style.css
+++ b/style.css
@@ -131,7 +131,8 @@ body {
   }
   
     .countdown {
-    margin: -15px 25px;
+    margin: 10px 25px;
+    padding: -15px 0;
     width: 100%;
   }
   
