--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body {
   }
   
     .countdown {
-    margin: 10px 25px;
+    margin: 10px 25px 20px 25px;
     width: 90%;
     height: 7.5%;
   }
